--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-image: url('./images/img.jpg');
+	background-image: url('./Images/img.jpg');
 	background-size: cover;
 	padding: 30px 20px;
 	image-resolution: 100%;
